# folder2dmg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflow/: release.yml
.github/workflows/: ci.yml  outdated_dependencies.yml  release.yml  release_from_tag.yml  security_audit.yml  test.yml  upload-release.yml  upload.yml
src/: bug_report.rs  cli.rs  lib.rs  main.rs  options.rs  utils.rs
tests/: main.rs
