[package]
name = "foldertodmg"
version = "0.1.2"
authors = ["Samuel Marcaille"]
edition = "2018"
license = "MIT"
description = "foldertodmg is a personnal helper to create image from directory"
homepage = "https://github.com/deild/foldertodmg"
repository = "https://github.com/deild/foldertodmg"

[dependencies]

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.5"

[package.metadata.release]
disable-publish = true
#no-dev-version = true
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-commit-message = "Release version {{version}}"
pre-release-replacements = [
    {file="README.md", search="foldertodmg [a-z0-9\\.-]+\\n", replace="foldertodmg {{version}}\n"} ,
    {file ="tests/main.rs", search="foldertodmg [a-z0-9\\.-]+\\n", replace="foldertodmg {{version}}\n"},
]
post-release-commit-message = "Start next development iteration {{next_version}}"
post-release-replacements = [
    {file="README.md", search="foldertodmg [a-z0-9\\.-]+\\n", replace="foldertodmg {{next_version}}\n"} ,
    {file ="tests/main.rs", search="foldertodmg [a-z0-9\\.-]+\\n", replace="foldertodmg {{next_version}}\n"},
]
