[package]
name = "folder2dmg"
version = "0.1.5-alpha.0"
authors = ["Samuel Marcaille"]
edition = "2018"
license = "MIT"
description = "folder2dmg is a personnal helper to create image from directory"
homepage = "https://github.com/deild/folder2dmg"
repository = "https://github.com/deild/folder2dmg"

[dependencies]
question = "0.2.2"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.5"

[package.metadata.release]
disable-publish = true
#no-dev-version = true
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-commit-message = "Release version {{version}}"
pre-release-replacements = [
    {file="README.md", search="folder2dmg [a-z0-9\\.-]+\\n", replace="folder2dmg {{version}}\n", prerelease=true} ,
    {file ="tests/main.rs", search="folder2dmg [a-z0-9\\.-]+\\n", replace="folder2dmg {{version}}\n", prerelease=true},
]
post-release-commit-message = "Start next development iteration {{next_version}}"
post-release-replacements = [
    {file="README.md", search="folder2dmg [a-z0-9\\.-]+\\n", replace="folder2dmg {{next_version}}\n", prerelease=true} ,
    {file ="tests/main.rs", search="folder2dmg [a-z0-9\\.-]+\\n", replace="folder2dmg {{next_version}}\n", prerelease=true},
]
